--- a/nerin_final_updated/frontend/admin.html
+++ b/nerin_final_updated/frontend/admin.html
@@ -582,6 +582,8 @@
     <script type="module" src="/admin-footer.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="/js/config.js"></script>
+    <script defer src="/js/footer.js"></script>
+    <script defer src="/js/fab-offset.js"></script>
     <!-- Traducciones -->
     <script type="module" src="/js/lang.js"></script>
   </body>
